// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptedStepItem renders accepted correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="AcceptedCardButton"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Object {
                  "color": "#3CC8E6",
                  "fontSize": 18,
                  "paddingRight": 8,
                },
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          Set a Reminder
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "flex": 1,
            "opacity": 1,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "transform": Array [
              Object {
                "translateY": 378,
              },
            ],
          }
        }
      >
        <DateTimePicker
          locale="en-TEST"
          minimumDate={2019-08-24T12:00:00.000Z}
          mode="datetime"
          onChange={[Function]}
          style={
            Object {
              "borderTopColor": "#ccc",
              "borderTopWidth": 1,
              "marginTop": 60,
            }
          }
          testID="DateTimePicker"
          value={2019-08-24T12:00:00.000Z}
        />
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ReminderRepeatButtonDaily"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Array [
                    Object {
                      "borderRadius": 35,
                      "height": 70,
                      "margin": 8,
                      "paddingHorizontal": 0,
                      "paddingVertical": 0,
                      "width": 70,
                    },
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#B4B6BA",
                      "borderWidth": 1,
                    },
                  ],
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 12,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
              >
                Daily
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ReminderRepeatButtonWeekly"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Array [
                    Object {
                      "borderRadius": 35,
                      "height": 70,
                      "margin": 8,
                      "paddingHorizontal": 0,
                      "paddingVertical": 0,
                      "width": 70,
                    },
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#B4B6BA",
                      "borderWidth": 1,
                    },
                  ],
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 12,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
              >
                Weekly
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ReminderRepeatButtonMonthly"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Array [
                    Object {
                      "borderRadius": 35,
                      "height": 70,
                      "margin": 8,
                      "paddingHorizontal": 0,
                      "paddingVertical": 0,
                      "width": 70,
                    },
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#B4B6BA",
                      "borderWidth": 1,
                    },
                  ],
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 12,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "letterSpacing": 1,
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
              >
                Monthly
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "height": 60,
              "paddingHorizontal": 20,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="Button"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    Array [
                      Object {
                        "color": "#007AFF",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "lineHeight": 24,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Cancel
              </Text>
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "#505256",
                "flex": 1,
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
                "textAlign": "center",
              }
            }
          >
            Date
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="Button"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    Object {
                      "color": "#007AFF",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 24,
                    },
                  ]
                }
              >
                Done
              </Text>
            </View>
          </View>
        </View>
      </View>
    </Modal>
    <Text
      style={
        Object {
          "color": "#505256",
          "flex": 1,
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "padding": 4,
          "paddingRight": 32,
        }
      }
    >
      title
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="CompleteStepButton"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 0,
            "borderWidth": 0,
            "height": 60,
            "justifyContent": "center",
            "margin": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          null,
          Object {
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
          null,
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/checkIcon-blue.png",
          }
        }
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`AcceptedStepItem renders completed correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CompletedCardButton"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
            "flex": 1,
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "padding": 4,
            "paddingRight": 32,
          },
          Object {
            "color": "#B4B6BA",
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/checkIcon-grey.png",
      }
    }
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;
